Fixing styling on mobile devices

--- a/style/site.css
+++ b/style/site.css
@@ -72,6 +72,13 @@
         height: 1300px !important;
     }
 
+    
+  .card-group {
+    height: 400px;
+    padding-top: 30px !important;
+    width: 100%;
+}
+
     .blue-bg {
         height: 30% !important;
     }
